# product-management

./: .gitignore  README.md
admin-service/: .env.example  Dockerfile  consumer.py  docker-compose.yml  producer.py  pyproject.toml  requirements.txt
admin-service/admin/: settings.py
admin-service/products/: models.py  serializers.py  tests.py  urls.py  viewsets.py
admin-service/products/migrations/: 0001_initial.py
main-api-service/: .editorconfig  Dockerfile  consumer.py  docker-compose.yml  main.py  producer.py  pyproject.toml  requirements.txt  service.py  test_main.py
main-api-service/migrations/versions/: f2a4b94cf74d_.py
