[tool.poetry]
name = "admin-service"
version = "0.1.0"
description = ""
authors = ["Wesley Mendes <wesley@wesleymendes.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
Markdown = "^3.4.1"
python-decouple = "^3.6"
django-extensions = "^3.2.0"
mysqlclient = "^2.1.1"
django-mysql = "^4.7.0"
django-cors-headers = "^3.13.0"
pika = "^1.3.0"
Unipath = "^1.1"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
