[tool.poetry]
name = "main-api-service"
version = "0.1.0"
description = ""
authors = ["Wesley Mendes <wesley@wesleymendes.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.0"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.39"
Flask-Migrate = "2.6.0"
Flask-Script = "^2.0.6"
Flask-Cors = "^3.0.10"
requests = "^2.28.1"
mysqlclient = "^2.1.1"
pika = "^1.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.3"
pytest = "^7.1.2"
pytest-flake8 = "^1.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
